Fix input fields having a wrong color

--- a/theme.css
+++ b/theme.css
@@ -54,8 +54,9 @@
     color: #fff4f4;
 }
 
-.input-text {
-    background: #fff;
+.input-text,input {
+    background: #393D45;
+    color: #ccc;
 }
 .input-text-label {
     color: gray;
@@ -74,7 +75,6 @@
 .u-form textarea {
     border: 1px solid #cccccc;
     border-bottom: 2px solid #0DBC79;
-    /* background: #ffffff; */
     background: #393D45;
     color: #ccc;
     outline-color: #0DBC79;
